k8s/services/api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-service-ip
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
