k8s/services/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ui.jae.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
    - host: api.jae.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
